@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20131216] [svn: r538]
+Changelog for sg3_utils-1.38 [20131218] [svn: r539]
   - sg_ses: add --dev-slot-num= and --sas-addr=
     - error and warning message cleanup
   - sg_inq: add --block=0|1 option to control opens
@@ -12,6 +12,7 @@ Changelog for sg3_utils-1.38 [20131216] [svn: r538]
   - sg_vpd: add LU_CONG to standard inquiry response output
   - sg_xcopy: environment variables: XCOPY_TO_SRC and
     XCOPY_TO_DST indicate where xcopy command is sent
+    - change default to send xcopy to dst (was src)
   - sg_luns: guard against garbage response
   - sg_write_same: repeat if unit attention
   - sg_rtpg: fix indexing bug with --extended option
